tests/rustdoc-ui/unable-fulfill-trait.stderr
error[E0107]: trait takes 1 generic argument but 0 generic arguments were supplied
  --> $DIR/unable-fulfill-trait.rs:4:17
   |
LL |     field1: dyn Bar<'a, 'b>,
   |                 ^^^ expected 1 generic argument
   |
note: trait defined here, with 1 generic parameter: `U`
  --> $DIR/unable-fulfill-trait.rs:8:11
   |
LL | pub trait Bar<'x, 's, U>
   |           ^^^         -
help: add missing generic argument
   |
LL |     field1: dyn Bar<'a, 'b, U>,
   |                           +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
